--- a/port-01/css/main.css
+++ b/port-01/css/main.css
@@ -1,12 +1,11 @@
 @import url('sket.css');
 
 header {
-    padding: 15px;
+    padding: 15px 0;
     display: flex;
-    position: fixed;
-    width: 100vw;
+    width: 100%;
     text-align: center;
-    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
     background-color: var(--mater-one);
 }
 header #site-logo {
@@ -23,10 +22,14 @@ header a {
 }
 
 .burger-btn {
+    margin-left: 10px;
     padding: 10px 15px;
-    position: absolute;
-    z-index: 100;
+    position: fixed;
+    z-index: 1;
     font-size: 5vmin;
+    border-radius: 3px;
+    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.1);
+    background-color: var(--mater-one);
     cursor: pointer;
 }
 
@@ -89,11 +92,6 @@ header a {
 }
 
 /* Biography Section */
-main h3 {
-    margin-bottom: 30px;
-    font-size: 2.5rem;
-    text-align: center;
-}
 #biography {
     margin-bottom: 150px;
     display: grid;
@@ -107,12 +105,24 @@ main h3 {
 .bio-photo img {
     width: 100%;
     height: auto;
+    border-radius: 3px;
 }
 .bio-intro {
     grid-area: biointro;
 }
+.bio-intro article {
+    margin-bottom: 20px;
+}
+.bio-intro p {
+    margin-bottom: 1rem;
+    text-indent: 1.5rem;
+}
+.bio-intro li {
+    padding-top: 5px;
+    list-style-position: inside;
+}
 
-/* Posts Section */
+/* Works Section */
 .article-grid {
     margin-bottom: 30px;
     display: grid;
@@ -120,14 +130,15 @@ main h3 {
         "image descript descript";
     column-gap: 25px;
 }
-.post-img {
+.works-img {
     grid-area: image;
 }
 .descript {
     grid-area: descript;
 }
-.article-grid h4 {
+h4 {
     font-size: 1.5rem;
+    font-weight: 500;
     padding-bottom: 10px;
 }
 .article-grid p {
@@ -138,6 +149,17 @@ main h3 {
     height: auto;
 }
 
+/* Post Section */
+.post-content {
+    padding: 0 30px;
+    text-align: center;
+}
+.post-content img {
+    width: 100%;
+    margin-bottom: 10px;
+    box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.1);
+}
+
 /* Footer Section */
 footer {
     margin-top: 30px;
@@ -145,7 +167,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2.2vmin;
+    font-size: 2.3vmin;
 }
 
 @media(max-width: 768px) {
