--- a/port-01/css/sket.css
+++ b/port-01/css/sket.css
@@ -4,10 +4,11 @@
 :root {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
+    color: var(--typo-two);
 
     /* Typography Colours */
     --typo-one: rgb(255, 255, 255);
-    --typo-two: rgb(31, 31, 31);
+    --typo-two: hsl(0, 0%, 16%);
     --typo-three: rgb(250, 244, 188);
 
     /* Material Colours */
@@ -18,11 +19,25 @@
 * {
     margin: 0%;
     padding: 0%;
-    outline: 1px dashed lightgrey;
+    outline: 0px dashed lightgrey;
+}
+
+h3 {
+    margin-bottom: 30px;
+    font-size: 6.5vmin;
+    text-align: center;
+}
+
+p {
+    line-height: 1.5;
+}
+
+a {
+    text-decoration: none;
 }
 
 /* Custom Settings */
-#biography {
+main {
     outline: 2px solid red;
 }
 
@@ -67,11 +82,12 @@ footer {
     padding: 7px 15px;
     font-size: 0.9rem;
     text-decoration: none;
+    text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
     border: none;
     border-radius: 5px;
     box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.3);
-    background-image: linear-gradient(rgb(30, 155, 255), rgb(0, 80, 235));
     color: var(--typo-one);
+    background-image: linear-gradient(rgb(30, 155, 255), rgb(0, 80, 235));
 }
 
 .in-active:hover {
