--- a/port-01/css/main.css
+++ b/port-01/css/main.css
@@ -116,6 +116,7 @@ header a {
 .bio-intro p {
     margin-bottom: 1rem;
     text-indent: 1.5rem;
+    text-align: justify;
 }
 .bio-intro li {
     padding-top: 5px;
@@ -150,13 +151,29 @@ h4 {
 }
 
 /* Post Section */
+.post-title {
+    margin-bottom: 20px;
+}
+.post-title .tool-list ul {
+    display: flex;
+    justify-content: center;
+}
+.post-title .tool-list li {
+    margin: 0 7px;
+    padding: 2px 10px;
+    list-style: none;
+    border-radius: 7px;
+    color: hsl(220, 100%, 70%);
+    background-color: hsl(220, 100%, 95%);
+}
 .post-content {
     padding: 0 30px;
     text-align: center;
 }
 .post-content img {
-    width: 100%;
+    margin-top: 30px;
     margin-bottom: 10px;
+    width: 100%;
     box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
