--- a/port-01/css/sket.css
+++ b/port-01/css/sket.css
@@ -13,7 +13,7 @@
 
     /* Material Colours */
     --mater-one: rgb(255, 255, 255);
-    --mater-two: rgb(31, 31, 31);
+    --mater-two: hsl(0, 0%, 16%);
 }
 
 * {
@@ -21,17 +21,26 @@
     padding: 0%;
     outline: 0px dashed lightgrey;
 }
-
 h3 {
     margin-bottom: 50px;
     font-size: 6.5vmin;
     text-align: center;
 }
-
+h4 {
+    font-size: 1.5rem;
+    font-weight: 500;
+    padding-bottom: 10px;
+}
 p {
     line-height: 1.5;
 }
-
+hr {
+    margin: 100px auto;
+    width: 50vw;
+    height: 1px;
+    border: none;
+    background-color: hsl(0, 0%, 90%);
+}
 /* Custom Settings */
 main {
     outline: 0px solid red;
@@ -40,8 +49,8 @@ main {
 /* Grid System */
 .wrapper {
     display: grid;
-    grid-template-rows: auto auto auto;
     grid-template-columns: 1fr 6fr 1fr;
+    grid-template-rows: auto auto auto;
     grid-template-areas: 
       "header header header"
       "hero hero hero"
@@ -73,33 +82,61 @@ footer {
     grid-area: footer;
 }
 
-/* Button */
+/* Anchor Button */
 .in-active {
-    padding: 7px 15px;
+    margin: 10px;
+    padding: 10px 20px;
     font-size: 0.9rem;
     text-decoration: none;
     text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
     border: none;
     border-radius: 5px;
-    box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0px 1px 0px rgb(42, 183, 236), 0px 3px 0px 0px #156785, 0px 5px 5px hsl(0, 0%, 60%);
     color: var(--typo-one);
-    background-image: linear-gradient(rgb(30, 155, 255), rgb(0, 80, 235));
+    background-color:rgb(44, 139, 202);
+    background-image: linear-gradient(rgb(62,184,229), rgb(44, 139, 202));
 }
-
 .in-active:hover {
     animation-name: active-button;
     animation-duration: 300ms;
     animation-fill-mode: forwards;
 }
-
 @keyframes active-button {
     100% {
-        background-image: linear-gradient(rgb(70, 210, 255), rgb(0, 80, 235));
+        background-image: linear-gradient(rgb(91, 205, 246), rgb(44, 139, 202));
     }
 }
-
 .in-active:active {
-    background-image: linear-gradient(rgb(30, 155, 255), rgb(0, 80, 235));
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
-    transform: translateY(1px);
+    top:3px;
+	background-image: linear-gradient(bottom, rgb(44, 139, 202), rgb(91, 205, 246));
+	box-shadow: inset 0px 1px 0px rgb(42, 183, 236), 0px 2px 0px 0px #156785, 0px 5px 3px hsl(0, 0%, 60%);
+}
+
+/* Real Button */
+.active-btn {
+    padding: 10px 20px;
+    font-size: 0.9rem;
+    text-decoration: none;
+    text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
+    border: none;
+    border-radius: 5px;
+    box-shadow: inset 0px 1px 0px rgb(42, 183, 236), 0px 3px 0px 0px #156785, 0px 5px 5px hsl(0, 0%, 60%);
+    color: var(--typo-one);
+    background-color:rgb(44, 139, 202);
+    background-image: linear-gradient(rgb(62,184,229), rgb(44, 139, 202));
+}
+.active-btn:hover {
+    animation-name: active-btn;
+    animation-duration: 300ms;
+    animation-fill-mode: forwards;
+}
+@keyframes active-btn {
+    100% {
+        background-image: linear-gradient(rgb(91, 205, 246), rgb(44, 139, 202));
+    }
+}
+.active-btn:active {
+    top:3px;
+	background-image: linear-gradient(bottom, rgb(44, 139, 202), rgb(91, 205, 246));
+	box-shadow: inset 0px 1px 0px rgb(42, 183, 236), 0px 2px 0px 0px #156785, 0px 5px 3px hsl(0, 0%, 60%);
 }
