--- a/port-01/css/main.css
+++ b/port-01/css/main.css
@@ -52,26 +52,26 @@ header a {
     padding-top: 60px;
   }
   
-  .sidenav a {
+.sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
     color: #818181;
     display: block;
     transition: 0.3s;
-  }
-  
-  .sidenav a:hover {
+}
+
+.sidenav a:hover {
     color: #f1f1f1;
-  }
-  
-  .sidenav .closebtn {
+}
+
+.sidenav .closebtn {
     position: absolute;
     top: 0;
     right: 25px;
     font-size: 36px;
     margin-left: 50px;
-  }
+}
 
 /* Hero Section */
 .hero-image {
@@ -121,7 +121,7 @@ header a {
     margin-bottom: 20px;
 }
 .bio-intro p {
-    margin-bottom: 1rem;
+    padding-bottom: 1rem;
     text-indent: 1.5rem;
     text-align: justify;
 }
@@ -148,7 +148,7 @@ header a {
     grid-area: descript;
 }
 .article-grid p {
-    margin-bottom: 20px;
+    padding-bottom: 1rem;
 }
 .article-grid .works-img img {
     width: 100%;
@@ -196,17 +196,39 @@ header a {
 .contact-guide {
     grid-area: guide;
 }
-.contact-form form {
-    margin: auto 20px;
+.contact-form {
+    grid-area: form;
+}
+.contact-guide p {
+    padding-bottom: 1rem;
+}
+.contact-guide .networks {
+    display: flex;
+}
+.contact-guide .networks a {
+    margin-right: 30px;
+    text-decoration: none;
+    color: var(--typo-two);
+}
+.contact-guide .networks i {
+    padding-right: 10px;
+    font-size: 1.5rem;
 }
 .contact-form input {
     margin: 10px auto 20px auto;
+    padding: 5px;
     width: 100%;
-    height: 2rem;
+    border: 1px solid hsl(0, 0%, 85%);
+    border-radius: 5px;
+    box-shadow: inset 1px 1px 2px hsl(0, 0%, 93%);
 }
 .contact-form textarea {
     margin: 10px auto;
+    padding: 10px;
     width: 100%;
+    border: 1px solid hsl(0, 0%, 85%);
+    border-radius: 5px;
+    box-shadow: inset 1px 1px 2px hsl(0, 0%, 93%);
 }
 .contact-form .namefield {
     display: grid;
