--- a/port-01/css/main.css
+++ b/port-01/css/main.css
@@ -163,9 +163,10 @@ header a {
 .post-title .tool-list ul {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 .post-title .tool-list li {
-    margin: 0 7px;
+    margin: 5px 7px;
     padding: 2px 10px;
     list-style: none;
     border-radius: 7px;
