--- a/port-01/css/main.css
+++ b/port-01/css/main.css
@@ -10,7 +10,7 @@ header {
     width: 100%;
     text-align: center;
     box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-    border-top: 1px solid rgb(0, 0, 0, 0.05);
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
     background-image: linear-gradient(hsl(0, 0%, 100%),hsl(0, 0%, 95%));
 }
 header #site-logo {
@@ -88,6 +88,29 @@ header a {
     margin: auto 20vmin;
 }
 .hero-image h2 {
+    font-size: 6vmin;
+    font-weight: 400;
+    line-height: 1.3;
+    text-align: center;
+    text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+    color: var(--typo-one);
+}
+
+/* Inner Hero Section */
+.inner-hero {
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40vh;
+    z-index: -1;
+    background: url('../img/photo_01.jpg') no-repeat center center fixed;
+    background-size: cover;
+}
+.inner-hero .container {
+    margin: auto 20vmin;
+}
+.inner-hero h2 {
     font-size: 6vmin;
     font-weight: 400;
     line-height: 1.3;
