--- a/port-01/css/sket.css
+++ b/port-01/css/sket.css
@@ -19,7 +19,7 @@
 * {
     margin: 0%;
     padding: 0%;
-    outline: 0px dashed lightgrey;
+    outline: 1px dashed lightgrey;
 }
 h3 {
     margin-bottom: 50px;
@@ -69,7 +69,7 @@ nav {
     background-color: tomato;
     grid-row: 1/4;
 }
-.hero-image {
+.hero-image, .inner-hero {
     grid-area: hero;
     grid-row: 1/3;
 }
