--- a/port-01/css/sket.css
+++ b/port-01/css/sket.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500|Roboto:400,500,700,900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500|Roboto:400,500,700,900&display=swap');
 
 /* Global Settings */
 :root {
@@ -19,7 +19,7 @@
 * {
     margin: 0%;
     padding: 0%;
-    outline: 1px dashed lightgrey;
+    outline: 0px dashed lightgrey;
 }
 h3 {
     margin-bottom: 50px;
@@ -42,7 +42,7 @@ hr {
     background-color: hsl(0, 0%, 90%);
 }
 /* Custom Settings */
-main {
+.inner-hero {
     outline: 0px solid red;
 }
 
@@ -63,11 +63,6 @@ header {
     grid-area: header;
     grid-column: 1/4;
     grid-auto-rows: max-content;
-}
-nav {
-    grid-area: nav;
-    background-color: tomato;
-    grid-row: 1/4;
 }
 .hero-image, .inner-hero {
     grid-area: hero;
