--- a/port-01/css/main.css
+++ b/port-01/css/main.css
@@ -251,7 +251,7 @@ header a {
 }
 .contact-form input {
     margin: 10px auto 20px auto;
-    padding: 5px;
+    padding: 10px 0;
     width: 100%;
     border: 1px solid hsl(0, 0%, 85%);
     border-radius: 5px;
@@ -259,7 +259,7 @@ header a {
 }
 .contact-form textarea {
     margin: 10px auto;
-    padding: 10px;
+    padding: 10px 0;
     width: 100%;
     border: 1px solid hsl(0, 0%, 85%);
     border-radius: 5px;
@@ -294,7 +294,7 @@ footer {
 
 @media(max-width: 768px) {
     #biography {
-        margin-bottom: 150px;
+        margin-bottom: 100px;
         display: grid;
         grid-template-rows: 1fr;
         grid-template-columns: 1fr;
