--- a/port-01/css/main.css
+++ b/port-01/css/main.css
@@ -81,19 +81,32 @@ header a {
     align-items: center;
     z-index: -1;
     height: 100vh;
-    background: url('../img/photo_01.jpg') no-repeat center center fixed;
+    background: url('../img/photo_06.jpeg') no-repeat center center fixed;
     background-size: cover;
 }
 .hero-image .container {
     margin: auto 20vmin;
 }
 .hero-image h2 {
-    font-size: 6vmin;
-    font-weight: 400;
+    margin-bottom: 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    font-weight: 500;
     line-height: 1.3;
     text-align: center;
-    text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+    text-transform: uppercase;
+    text-shadow: 0 2px 7px rgba(255, 255, 255, 0.6);
+    color: var(--typo-two);
+}
+.hero-image h3 {
+    margin: 0;
+    padding: 30px;
+    font-size: 3.5vh;
+    font-weight: 400;
+    line-height: 2rem;
+    border-radius: 3px;
     color: var(--typo-one);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 /* Inner Hero Section */
